--- a/trunk/limehd/res/values-zh/strings.xml
+++ b/trunk/limehd/res/values-zh/strings.xml
@@ -371,7 +371,7 @@
     <string name="l3_tab_initial_error">下載失敗，請確認裝置已連上網路.</string>
     <string name="l3_tab_initial_message">請點選 [預載資料庫] OR [空白資料庫] 鍵下載 LIME 資料庫或點選 [還原資料庫] 鍵由備份檔案中還原</string>
     <string name="l3_initial_btn_load_empty_db">空白資料庫</string>
-    <string name="l3_initial_btn_load_phonetic_only_db">僅含注音資料庫(連打字根)</string>
+    <string name="l3_initial_btn_load_phonetic_only_db">僅含注音資料庫</string>
     <string name="l3_initial_btn_load_phonetic_hs_only_db">僅含注音+華象直覺資料庫</string>
     <string name="l3_initial_btn_load_preload_db">預載資料庫 \n注音, 倉頡, 倉頡五代 \n快倉, 大易, 輕鬆　　\n行列, 行列 １０　 　</string>
     <string name="l3_initial_btn_reset_db">重置資料庫</string>
@@ -499,21 +499,21 @@
     <string name="l3_im_download_from_ez_install">開始安裝輕鬆字根</string>
     
     
-    <string name="l3_im_download_from_cjk_phonetic">下載並安裝注音 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_phonetic_start">開始下載注音 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_phonetic_install">開始安裝注音 Unicode CJK 字根</string>
+    <string name="l3_im_download_from_cjk_phonetic">下載並安裝注音字根</string>
+    <string name="l3_im_download_from_cjk_phonetic_start">開始下載注音字根</string>
+    <string name="l3_im_download_from_cjk_phonetic_install">開始安裝注音字根</string>
     
-    <string name="l3_im_download_from_cjk_pinyin">下載並安裝拼音 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_pinyin_start">開始下載拼音 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_pinyin_install">開始安裝拼音 Unicode CJK 字根</string>
+    <string name="l3_im_download_from_cjk_pinyin">下載並安裝拼音字根</string>
+    <string name="l3_im_download_from_cjk_pinyin_start">開始下載拼音字根</string>
+    <string name="l3_im_download_from_cjk_pinyin_install">開始安裝拼音字根</string>
     
-    <string name="l3_im_download_from_cjk_ecj">下載並安裝速成 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_ecj_start">開始下載速成 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_ecj_install">開始安裝速成 Unicode CJK 字根</string>
+    <string name="l3_im_download_from_cjk_ecj">下載並安裝速成字根</string>
+    <string name="l3_im_download_from_cjk_ecj_start">開始下載速成字根</string>
+    <string name="l3_im_download_from_cjk_ecj_install">開始安裝速成字根</string>
     
-    <string name="l3_im_download_from_cjk_cj">下載並安裝倉頡 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_cj_start">開始下載倉頡 Unicode CJK 字根</string>
-    <string name="l3_im_download_from_cjk_cj_install">開始安裝倉頡 Unicode CJK 字根</string>
+    <string name="l3_im_download_from_cjk_cj">下載並安裝倉頡字根</string>
+    <string name="l3_im_download_from_cjk_cj_start">開始下載倉頡字根</string>
+    <string name="l3_im_download_from_cjk_cj_install">開始安裝倉頡字根</string>
     
     <string name="l3_im_download_from_pinyin_big5">下載並安裝拼音字根BIG5字集版本</string>
     <string name="l3_im_download_from_pinyin_big5_start">開始下載拼音字根BIG5字集版本</string>
