--- a/trunk/limehd/res/values-zh/strings.xml
+++ b/trunk/limehd/res/values-zh/strings.xml
@@ -220,7 +220,8 @@
 		<item>標準</item>
 		<item>倚天41鍵</item>
 		<item>倚天26鍵</item>
-		<item>許氏</item>
+		<item>許氏 (英文鍵盤)</item>
+		<item>許氏 (符號鍵盤)</item>
 	</string-array>
 	
     <!-- IM Reverse Lookup List -->  
