--- a/trunk/limehd/res/values-zh-rCN/strings.xml
+++ b/trunk/limehd/res/values-zh-rCN/strings.xml
@@ -630,21 +630,23 @@
 	    
 		\n3.8.2-312
 		\n\n(提升文字查询速度，请重汇字根档或下载预载资料库[请勿使用旧版备份还原资料库])
+		
 		\n1. 修正候选列展开后，画面乱掉问题
 		\n2. 修正连打学习及注音快拼学习问题
 		\n3. 修正候选列候选字 cache 移除问题
 		\n4. 修正字根对照表汇入问题
 		\n5. 修正 Milestone 2 实体键盘 ALT 组合键问题
-		\n6. 修改预载资料库中注音输入法为连打字根
-		\n7. 修改许氏注音及倚天26/41键注音资料库查询方式，提升反应速度
-		\n8. 修改档案选取模组，已可选取设备有内建空间的外接sdcard上的档案
-		\n9. 修改按键后文字预览跳出视窗会随着键盘大小放大缩小
-		\n10. 修改分离键盘喜好设定，新增“仅横向开启”选项
-		\n11. 新增许氏注音及倚天26键注音符号软体键盘
-		\n12. 新增中文软体键盘长按“EN/123”键可快速切换到半型符号键盘
-		\n13. 新增拼音输入法，请至输入法管理中的拼音，下载安装字根档
-		\n14. 新增仓颉、简易及注音 Unicode CJK 字集字根档，请至输入法管理中下载安装字根档
-		\n15. 新增长按左下键盘键呼叫系统语音输入功能 (需 Android 4.0)\n\n
+		\n6. 修正在 Chrome 浏览器中无法输入中文问题
+		\n7. 修改预载资料库中注音输入法为连打字根
+		\n8. 修改许氏注音及倚天26/41键注音资料库查询方式，提升反应速度
+		\n9. 修改档案选取模组，已可选取设备有内建空间的外接sdcard上的档案
+		\n10. 修改按键后文字预览跳出视窗会随着键盘大小放大缩小
+		\n11. 修改分离键盘喜好设定，新增“仅横向开启”选项
+		\n12. 新增许氏注音及倚天26键注音符号软体键盘
+		\n13. 新增中文软体键盘长按“EN/123”键可快速切换到半型符号键盘
+		\n14. 新增拼音输入法，请至输入法管理中的拼音，下载安装字根档
+		\n15. 新增仓颉、简易及注音 Unicode CJK 字集字根档，请至输入法管理中下载安装字根档
+		\n16. 新增长按左下键盘键呼叫系统语音输入功能 (需 Android 4.0)\n\n
 	
 		LIME中文输入法Facebook粉丝专页\n
 		http://facebook.com/limeime/\n\n
