--- a/trunk/limehd/res/values-zh/strings.xml
+++ b/trunk/limehd/res/values-zh/strings.xml
@@ -659,14 +659,13 @@
 		
 		\n\n更新後，請務必重匯字根檔或下載預載資料庫 [請勿使用舊版備份還原]
 	
-		\n1. 修正倉頡及速成（簡易）與 CNS 標準拆碼不同的問題 (請重新下載預載資料庫或重新匯入對照檔)
-		\n2. 修正 ‵ 字根問題 (輕鬆及華象直覺)
-		\n3. 修正 Milestone 2/3 未阻斷系統 ALT-DEL 刪除整行功能
-		\n4. 修正候選列使用方向鍵的問題
-		\n5. 調整輕鬆輸入法軟體鍵盤長按 6 為 ＼及 ‵ 雙字根，實體鍵盤修改可用 ‵ 字根
-		\n6. 調整電話鍵盤，修改 / 鍵，長按為 .
-		\n7. 調整許氏及倚天26注音鍵盤選項，可選字根或英文鍵盤
-		\n8. 調整 Google 雲端備份及還原模組\n\n
+		\n1. 修正Android 4.x版本語音輸入問題
+		\n2. 改善關聯字檢索速度
+		\n3. 新增DropBox備份
+		\n4. 訊息列文字顯示方式調整
+		\n5. 大易字根下載位址變更
+		\n6. 新增ADMOB廣告模組\n\n
+		
 		LIME中文輸入法Facebook粉絲專頁\n
 		http://facebook.com/limeime/\n\n
 		LIME 使用與操作說明\n
