--- a/LimeStudio/app/src/main/res/values/strings.xml
+++ b/LimeStudio/app/src/main/res/values/strings.xml
@@ -1,9 +1,5 @@
 <resources>
-    <string name="app_name">LIMEIME</string>
-
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="app_name">萊姆輸入法</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -16,14 +12,15 @@
     <string name="add_im_backup_dropbox">Dropbox 備份</string>
     <string name="add_im_backup_google">Google 備份</string>
     <string name="add_im_backup_local">本地備份</string>
-    <string name="add_im_btn_import_standard">匯入 .CIN/TXT 格式</string>
     <string name="add_im_database">備份/還原資料庫</string>
     <string name="add_im_database_description">備份完整資料庫至本地/雲端空間，或者由本地/雲端空間還原完整資料庫檔案</string>
     <string name="add_im_download">下載輸入法</string>
     <string name="add_im_download_description">下載並匯入系統提供的輸入法，這一個操作需要連線網際網路，請啟用相關設定</string>
     <string name="add_im_import">新增輸入法</string>
     <string name="add_im_import_description">請選擇要匯入的檔案，系統支援標準 .CIN 格式、LIME 簡易字根表及 .LIME 輸入法備份檔</string>
+    <string name="add_im_import_standard">匯入自定字根表</string>
     <string name="add_im_import_package">匯入 .LIME 備份</string>
+    <string name="add_im_import_related">匯入關聯字庫</string>
     <string name="add_im_restore_dropbox">Dropbox 還原</string>
     <string name="add_im_restore_google">Google 還原</string>
     <string name="add_im_restore_local">本地還原</string>
